--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": "^8.1",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^14.1",
+        "php-amqplib/php-amqplib": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
