--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,12 +23,11 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-configure gd \
         --with-freetype=/usr/include/ \
         --with-jpeg=/usr/include/ \
-        --with-xpm=/usr/lib/x86_64-linux-gnu/ \
+        --with-xpm=/usr/lib/x86_64-linux-gnu/
 
-# Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
 # Создаем пользователя и группу
 RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www
 USER www
+
