--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
         "php": "^8.1",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "vladimir-yuldashev/laravel-queue-rabbitmq": "^14.1",
-        "php-amqplib/php-amqplib": "^3.2"
+        "php-amqplib/php-amqplib": "^3.2",
+        "predis/predis": "^2.2",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^14.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
