--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -26,6 +26,11 @@ RUN apt-get update && apt-get install -y \
         --with-xpm=/usr/lib/x86_64-linux-gnu/
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+RUN apt-get update && apt-get install -y \
+    redis-server \
+    && pecl install redis \
+    && docker-php-ext-enable redis
 # Создаем пользователя и группу
 RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www
